--- a/app/src/main/res/layout/scrap_layout.xml
+++ b/app/src/main/res/layout/scrap_layout.xml
@@ -8,12 +8,14 @@
     <EditText
         android:id="@+id/searchText"
         android:layout_centerInParent="true"
+        android:hint="ex. 요가"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/searchBtn"
         android:layout_below="@id/searchText"
         android:layout_marginTop="500px"
+        android:text="검색"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
